--- a/test3.css
+++ b/test3.css
@@ -1,6 +1,7 @@
-*{font-family: 'Open Sans', sans-serif;
+*{font-family: 'Raleway', sans-serif;
 	text-align: center;
 	color:white;
+	margin:0;
 }
 	
 .top{ background-image: url(https://images.unsplash.com/photo-1496551729338-fa0c71a2c950?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=86c3f566e61568f5693c87a17c7fefbb&auto=format&fit=crop&w=1350&q=80);
@@ -22,11 +23,13 @@ h3{
 
 
 img{
+	width:350px;
+	height: 500px;
 	transition: all 0.5s;
-	margin:40px;
+	margin:30px;
 }
 img:hover{
-	opacity: 0.5;
+	opacity: 0.7;
 	transform: translateY(-20px);
 
 }
@@ -35,9 +38,10 @@ h1,h2{font-size: 50px;
 }
 h3::after{
 	content: "";
-	border: 2px blue solid;
+	border: 1px #3385ff solid;
 	display: block;
-	margin-right:400px;
-	margin-left: 400px;
+	margin-right:500px;
+	margin-left: 500px;
+	margin-top: 10px;
 
 }
